# mpris-stats

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: args.rs  event_loop.rs  main.rs  output.rs  player.rs
src/event_loop/: update_listener.rs
